[package]
name = "flying"
version = "0.1.0"
edition = "2024"
description = "A distributed service framework"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }
mongodb = { version = "3.2.1" }
