[package]
name = "flying"
version = "0.1.0"
edition = "2024"
description = "A distributed service framework"
license = "Apache-2.0"

[profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
# strip = "symbols"
# panic = "abort"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }
mongodb = { version = "3.2.1" }
dashmap = "6.1.0"
anyhow = "1.0.97"
log = "0.4.26"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
# chrono = "0.4.40"
